add code c à partir du C90

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(test_curl_api_23mars)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(test_curl_api_23mars include/curl.c include/database.c inclu/database.h inclu/json_parser.h include/json_parser.c main.c)
+add_executable(test_curl_api_23mars include/curl.c include/database.c inclu/database.h inclu/json_parser.h include/json_parser.c main.c cmake-build-debug/Testing/excritura/yv.c)
